examples/invalid/ns/hello_glm_invalid.ns
mod cpu Main {
  fn main() {
    let nil: ref Node? = null();
    let head_raw: ref Node = alloc_node(10, nil);
    let head: ref Node = move(head_raw);
    let head_ref: ref Node = borrow(head);
    let bad_move: ref Node = move(head);
    print(load_value(head_ref));
    print(load_value(bad_move));
  }
}
